--- a/Angular_cafe_Mgm/Cafe-app/package.json
+++ b/Angular_cafe_Mgm/Cafe-app/package.json
@@ -22,6 +22,7 @@
     "ng-angular-popup": "^0.6.2",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
